# mserver

./: Cargo.toml
mserialize/: Cargo.toml
mserialize-derive-macro/: Cargo.toml
mserialize-derive-macro/src/: lib.rs
mserialize/src/: lib.rs
mserver-client/: Cargo.toml
mserver-client/src/: client.rs  configuration_handlers.rs  handshaking_handler.rs  lib.rs  login_handler.rs  play_handler.rs  state.rs  status_handler.rs
mserver-entity/: Cargo.toml
mserver-entity/src/: lib.rs
mserver-mpacket/: Cargo.toml
mserver-mpacket/src/: lib.rs  mpacket.rs
mserver-types/: Cargo.toml
mserver-types/src/: lib.rs  muuid.rs  varint.rs
src/: client.rs  configuration_handlers.rs  connection.rs  handshaking_handler.rs  login_handler.rs  main.rs  mpacket.rs  mstring.rs  muuid.rs  play_handler.rs  status_handler.rs  varint.rs  varlong.rs
