workspace = { members = ["mserialize", "mserialize-derive-macro", "mserver-client", "mserver-entity", "mserver-mpacket", "mserver-types"] }
[package]
name = "mserver"
version = "0.1.0"
edition = "2021"
authors = ["Louis MOULIN(@moulin-louis) <louis.moulin@outlook.fr>"]
repository = "https://github.com/moulin-louis/mserver"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
bevy_ecs = "0.14.0-rc.2"
# my crates POGGERS
mserialize = { path = "mserialize" }
mserialize-derive-macro = { path = "mserialize-derive-macro" }
mserver-client = { path = "mserver-client" }
mserver-mpacket = { path = "mserver-mpacket" }
mserver-types = { path = "mserver-types" }
local-ip-address = "0.6.1"
