[package]
name = "mserialize-derive-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.66", features = ["full"] }
quote = { version = "1.0.36", features = ["default"] }
bincode = "2.0.0-rc.3"
serde = { version = "1.0.203", features = ["derive"] }
mserialize = { path = "../mserialize" }
