[package]
name = "mserver-mpacket"
version = "0.1.0"
edition = "2021"

[dependencies]
varint-simd = { version = "0.4.0", features = ["native-optimizations"] }
byteorder = "1.5.0"
leb128 = "0.2.5"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
mserver-types = { path = "../mserver-types" }
mserialize = { path = "../mserialize" }